--- a/package.json
+++ b/package.json
@@ -11,13 +11,19 @@
     "format": " prettier . --write"
   },
   "dependencies": {
+    "@firebase/app-types": "^0.9.3",
     "@nuxtjs/color-mode": "^3.5.2",
     "@tailwindcss/vite": "^4.1.11",
+    "firebase": "^12.0.0",
+    "firebase-admin": "^13.4.0",
+    "firebase-functions": "^6.4.0",
     "maz-ui": "^3.50.1",
     "nuxt": "^3.17.7",
+    "nuxt-vuefire": "^1.1.0",
     "tailwindcss": "^4.1.11",
     "vue": "^3.5.17",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "vuefire": "^3.2.2"
   },
   "devDependencies": {
     "prettier": "3.6.2"
