--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@firebase/app-types": "^0.9.3",
     "@nuxtjs/color-mode": "^3.5.2",
     "@tailwindcss/vite": "^4.1.11",
+    "dayjs": "^1.11.13",
     "firebase": "^12.0.0",
     "firebase-admin": "^13.4.0",
     "firebase-functions": "^6.4.0",
