--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@firebase/app-types": "^0.9.3",
     "@nuxtjs/color-mode": "^3.5.2",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/vite": "^4.1.11",
     "dayjs": "^1.11.13",
     "firebase": "^12.0.0",
