--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@pinia/nuxt": "^0.11.2",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/vite": "^4.1.11",
+    "aos": "^2.3.4",
     "dayjs": "^1.11.13",
     "firebase": "^12.0.0",
     "firebase-admin": "^13.4.0",
@@ -32,6 +33,7 @@
     "vuefire": "^3.2.2"
   },
   "devDependencies": {
+    "nuxt-qrcode": "^0.4.6",
     "prettier": "3.6.2"
   }
 }
