--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "dependencies": {
     "@firebase/app-types": "^0.9.3",
     "@nuxtjs/color-mode": "^3.5.2",
+    "@paystack/inline-js": "^2.22.2",
     "@pinia/nuxt": "^0.11.2",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/vite": "^4.1.11",
     "aos": "^2.3.4",
+    "axios": "^1.11.0",
     "dayjs": "^1.11.13",
     "firebase": "^12.0.0",
     "firebase-admin": "^13.4.0",
@@ -29,6 +31,7 @@
     "remixicon": "^4.6.0",
     "tailwindcss": "^4.1.11",
     "vue": "^3.5.17",
+    "vue-clipboard3": "^2.0.0",
     "vue-router": "^4.5.1",
     "vuefire": "^3.2.2"
   },
