--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "firebase": "^12.0.0",
     "firebase-admin": "^13.4.0",
     "firebase-functions": "^6.4.0",
+    "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.10.3",
+    "jspdf": "^3.0.1",
     "maz-ui": "^3.50.1",
     "nuxt": "^3.17.7",
     "nuxt-vuefire": "^1.1.0",
