--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@pinia/nuxt": "^0.11.2",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/vite": "^4.1.11",
+    "@vuelidate/core": "^2.0.3",
+    "@vuelidate/validators": "^2.0.4",
     "aos": "^2.3.4",
     "axios": "^1.11.0",
     "dayjs": "^1.11.13",
